--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "btrz-formatter",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A formatter library",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/istanbul-harmony/lib/cli.js cover node_modules/mocha/bin/_mocha -- --ui bdd",
+    "test": "node_modules/mocha/bin/_mocha --exit",
     "test-w": "node_modules/mocha/bin/mocha -w"
   },
   "repository": {
@@ -12,9 +12,8 @@
     "url": "https://github.com/Betterez/btrz-formatter.git"
   },
   "devDependencies": {
-    "chai": "^2.1.2",
-    "mocha": "^2.2.1",
-    "istanbul-harmony": "^0.3.1"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3"
   },
   "keywords": [
     "Formatting",
@@ -26,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/Betterez/btrz-formatter/issues"
   },
-  "homepage": "https://github.com/Betterez/btrz-formatter"
+  "homepage": "https://github.com/Betterez/btrz-formatter",
+  "dependencies": {
+    "bz-date": "^1.0.0"
+  }
 }
