--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "A formatter library",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/mocha/bin/_mocha --exit",
-    "test-w": "node_modules/mocha/bin/mocha -w"
+    "tdd": "mocha --recursive test/ -w",
+    "test": "mocha --recursive  test/",
+    "preversion": "npm test",
+    "postversion": "git push origin main && git push --tags",
+    "version": "git tag $1"
   },
   "repository": {
     "type": "git",
