--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tdd": "mocha --recursive test/ -w",
     "test": "mocha --recursive  test/",
     "preversion": "npm test",
-    "postversion": "git push origin main && git push --tags",
+    "postversion": "git push origin master && git push --tags",
     "version": "git tag $1"
   },
   "repository": {
